Fix border-color change flicker

--- a/src/components/form-elements/checkbox/_checkbox.scss
+++ b/src/components/form-elements/checkbox/_checkbox.scss
@@ -77,7 +77,7 @@ $checkboxClickableArea: 32px;
 
     &:hover {
       .sg-checkbox__icon {
-        border: 2px solid var(--checkboxHoverColor);
+        border-color: var(--checkboxHoverColor);
       }
 
       .sg-checkbox__input {
@@ -182,6 +182,7 @@ $checkboxClickableArea: 32px;
     animation-direction: normal, reverse;
 
     transition: background-color 0s $easingRegular 0.08s;
+    transition: border-color 0s $easingRegular;
 
     svg {
       position: absolute;
